# hand_gesture_recognition

./: README.md  main.py  pyproject.toml
conf/: config.yaml
experiments/class_1/.hydra/: config.yaml  hydra.yaml  overrides.yaml
experiments/class_2/.hydra/: config.yaml  hydra.yaml  overrides.yaml
experiments/class_3/.hydra/: config.yaml  hydra.yaml  overrides.yaml
experiments/class_4/.hydra/: config.yaml  hydra.yaml  overrides.yaml
experiments/class_5/.hydra/: config.yaml  hydra.yaml  overrides.yaml
experiments/demo/.hydra/: config.yaml  hydra.yaml
src/gesture/algorithms/: classification.py  segmentation.py
src/gesture/data/: preprocessing.py  utils.py
src/gesture/evaluate/: stats.py
templates/back_camera/hands/: labels.csv
templates/front_face_camera/binary_hands/: labels.csv
tools/: evaluate.py  evaluate.sh  prepare_back_templates.sh  prepare_front_templates.sh  prepare_templates.py
